# Copyright (C) 2016-2019,2021,2025,2026 Rodrigo Jose Hernandez Cordoba
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

find_package(OpenGL REQUIRED)
if(UNIX)
  find_package(X11)
endif()

include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR})

set(CMAKE_REQUIRED_QUIET OFF)

set(CMAKE_REQUIRED_INCLUDES ${CMAKE_CURRENT_BINARY_DIR})

check_include_file_cxx("GL/glcorearb.h" HAS_GLCOREARB_H)
if(NOT HAS_GLCOREARB_H)
  message(STATUS "Downloading KHR/khrplatform.h")
  file(DOWNLOAD https://www.khronos.org/registry/EGL/api/KHR/khrplatform.h
                "${CMAKE_CURRENT_BINARY_DIR}/KHR/khrplatform.h"
       SHOW_PROGRESS)
  message(STATUS "Downloading GL/glcorearb.h")
  file(DOWNLOAD https://www.khronos.org/registry/OpenGL/api/GL/glcorearb.h
                "${CMAKE_CURRENT_BINARY_DIR}/GL/glcorearb.h"
       SHOW_PROGRESS)
  set(HAS_GLCOREARB_H 1 CACHE INTERNAL "Downloaded header file" FORCE)
  set(GLCOREARB_H_PATH "${CMAKE_CURRENT_BINARY_DIR}/GL/glcorearb.h")
else()
  find_file(GLCOREARB_H_PATH NAMES "glcorearb.h" PATHS ${CMAKE_CURRENT_BINARY_DIR} PATH_SUFFIXES $ENV{MSYSTEM_CHOST}/include/GL GL NO_CACHE)
endif()

if(WIN32)
  check_include_files("GL/gl.h;GL/wglext.h" HAS_WGLEXT_H)
  if(NOT HAS_WGLEXT_H)
    message(STATUS "Downloading GL/wglext.h")
    file(DOWNLOAD https://www.khronos.org/registry/OpenGL/api/GL/wglext.h
                  "${CMAKE_CURRENT_BINARY_DIR}/GL/wglext.h"
         SHOW_PROGRESS)
    set(HAS_WGLEXT_H 1 CACHE INTERNAL "Downloaded header file" FORCE)
  endif()
endif()

message(STATUS "Generator ${CMAKE_GENERATOR}")
if(CMAKE_GENERATOR MATCHES "[Mm]ake")
  set(DOLLAR_SIGN "$$")
else()
  set(DOLLAR_SIGN "$")
endif()

add_custom_command(
  OUTPUT
         ${CMAKE_CURRENT_BINARY_DIR}/glDeclarations.h
         ${CMAKE_CURRENT_BINARY_DIR}/glDefinitions.h
         ${CMAKE_CURRENT_BINARY_DIR}/glAssignments.h
  COMMAND
    ${SED_EXECUTABLE}
    "\"s/^\\s*\\(gl\\S*\\)\\s*${DOLLAR_SIGN}/extern PFN\\U\\1\\EPROC \\1$<SEMICOLON>/g\""
    glFunctions.txt > ${CMAKE_CURRENT_BINARY_DIR}/glDeclarations.h
  COMMAND
    ${SED_EXECUTABLE}
    "\"s/^\\s*\\(gl\\S*\\)\\s*${DOLLAR_SIGN}/PFN\\U\\1\\EPROC \\1 = nullptr$<SEMICOLON>/g\""
    glFunctions.txt > ${CMAKE_CURRENT_BINARY_DIR}/glDefinitions.h
  COMMAND
    ${SED_EXECUTABLE}
    "\"s/^\\s*\\(gl\\S*\\)\\s*${DOLLAR_SIGN}/GLGETPROCADDRESS ( PFN\\U\\1\\EPROC, \\1 )$<SEMICOLON>/g\""
    glFunctions.txt > ${CMAKE_CURRENT_BINARY_DIR}/glAssignments.h
  COMMAND
    ${SED_EXECUTABLE} -i
    "\"s/\\*DISCLAIMER\\*/ THIS FILE WAS AUTOGENERATED, DO NOT EDIT, edit glFunctions.txt instead. /g\""
    ${CMAKE_CURRENT_BINARY_DIR}/glDeclarations.h
  COMMAND
    ${SED_EXECUTABLE} -i
    "\"s/\\*DISCLAIMER\\*/ THIS FILE WAS AUTOGENERATED, DO NOT EDIT, edit glFunctions.txt instead. /g\""
    ${CMAKE_CURRENT_BINARY_DIR}/glDefinitions.h
  COMMAND
    ${SED_EXECUTABLE} -i
    "\"s/\\*DISCLAIMER\\*/ THIS FILE WAS AUTOGENERATED, DO NOT EDIT, edit glFunctions.txt instead. /g\""
    ${CMAKE_CURRENT_BINARY_DIR}/glAssignments.h
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/glFunctions.txt
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  COMMENT "Generating OpenGL functions for ${CMAKE_GENERATOR}.")

#/************************************************************************/
# Generate proxy functions for debugging OpenGL calls.
# This is now a custom command that only runs when glFunctions.txt changes.
#/************************************************************************/

# Configure the script with current CMake variables
configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/GenerateProxyFunctions.cmake.in
  ${CMAKE_CURRENT_BINARY_DIR}/GenerateProxyFunctions.cmake
  @ONLY
)

add_custom_command(
  OUTPUT
    ${CMAKE_CURRENT_BINARY_DIR}/glProxyFunctions.h
    ${CMAKE_CURRENT_BINARY_DIR}/glProxyFunctions.cpp
  COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/GenerateProxyFunctions.cmake
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/glFunctions.txt ${CMAKE_CURRENT_BINARY_DIR}/GenerateProxyFunctions.cmake
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  COMMENT "Generating OpenGL proxy functions"
)

#/************************************************************************/

set(OPENGL_RENDERER_HEADERS
    ${CMAKE_CURRENT_BINARY_DIR}/glDeclarations.h
    ${CMAKE_CURRENT_BINARY_DIR}/glDefinitions.h
    ${CMAKE_CURRENT_BINARY_DIR}/glAssignments.h
    ${CMAKE_CURRENT_BINARY_DIR}/glProxyFunctions.h
    OpenGLRenderer.hpp
    OpenGLWindow.hpp
    OpenGLFunctions.hpp
    OpenGLBuffer.hpp
    OpenGLMesh.hpp
    OpenGLPipeline.hpp
    OpenGLMaterial.hpp
    OpenGLTexture.hpp
    OpenGLFrameBuffer.hpp
    OpenGLMemoryPoolBuffer.hpp)

set(OPENGL_RENDERER_SOURCES
    ${CMAKE_CURRENT_BINARY_DIR}/glProxyFunctions.cpp
    OpenGLRenderer.cpp
    OpenGLWindow.cpp
    OpenGLBuffer.cpp
    OpenGLMesh.cpp
    OpenGLPipeline.cpp
    OpenGLMaterial.cpp
    OpenGLTexture.cpp
    OpenGLFunctions.cpp
    OpenGLFrameBuffer.cpp
    OpenGLMemoryPoolBuffer.cpp
    Plugin.cpp)

# set_source_files_properties(OpenGLFunctions.cpp PROPERTIES COMPILE_FLAGS "-E")

add_library(OpenGLRenderer
            SHARED
            ${OPENGL_RENDERER_HEADERS}
            ${OPENGL_RENDERER_SOURCES}
            ${CMAKE_SOURCE_DIR}/include/aeongames/Renderer.hpp)

if(IWYU_PROGRAM)
  set_property(TARGET OpenGLRenderer PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${IWYU_COMMAND_LINE})
endif()

target_link_libraries(OpenGLRenderer
                      ${OPENGL_LIBRARIES}
                      ${X11_LIBRARIES}
                      ProtoBufClasses
                      AeonEngine
                      Threads::Threads)

if(MSVC)
  set_target_properties(
    OpenGLRenderer
    PROPERTIES COMPILE_FLAGS "-WX -D_CRT_SECURE_NO_WARNINGS")
elseif(MINGW OR MSYS)
  set_target_properties(OpenGLRenderer PROPERTIES PREFIX "")
endif()

set_property(GLOBAL APPEND PROPERTY PLUGINS OpenGLRenderer)

if(USE_CLANG_TIDY)
  set_target_properties(
    OpenGLRenderer
    PROPERTIES
      CXX_CLANG_TIDY
      "${CLANG_TIDY_EXECUTABLE};-fix;-header-filter=aeongames/;${CLANG_TIDY_CHECKS}"
    )
endif()
