# Copyright (C) 2016-2019,2021,2025,2026 Rodrigo Jose Hernandez Cordoba
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

find_package(OpenGL REQUIRED)
if(UNIX)
  find_package(X11)
endif()

include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/include)

set(GLCOREARB_H_PATH "${CMAKE_CURRENT_SOURCE_DIR}/include/GL/glcorearb.h")

set(CMAKE_REQUIRED_QUIET OFF)

set(CMAKE_REQUIRED_INCLUDES ${CMAKE_CURRENT_BINARY_DIR})

# Generate glDeclarations.h, glDefinitions.h and glAssignments.h from
# glFunctions.txt using pure CMake (replaces the previous sed-based pipeline,
# which was fragile under the MSVC/vcpkg build). Lines that consist solely of
# a "gl<Name>" identifier are transformed; all other lines (preprocessor
# guards, comments, blanks) are passed through verbatim. The "*DISCLAIMER*"
# token in the input is replaced with the autogeneration banner.
#
# Re-run at configure time whenever glFunctions.txt changes.
set_property(DIRECTORY APPEND PROPERTY
  CMAKE_CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/glFunctions.txt")

file(READ "${CMAKE_CURRENT_SOURCE_DIR}/glFunctions.txt" _gl_functions_txt)
# Protect any literal semicolons before turning newlines into list separators.
string(REPLACE ";" "\\;" _gl_functions_txt "${_gl_functions_txt}")
# Strip a single trailing newline so the split does not yield an empty final
# entry (which would add a spurious blank line to every output file).
string(REGEX REPLACE "\r?\n$" "" _gl_functions_txt "${_gl_functions_txt}")
string(REPLACE "\n" ";" _gl_functions_lines "${_gl_functions_txt}")

set(_gl_declarations "")
set(_gl_definitions  "")
set(_gl_assignments  "")
set(_gl_disclaimer " THIS FILE WAS AUTOGENERATED, DO NOT EDIT, edit glFunctions.txt instead. ")

foreach(_line IN LISTS _gl_functions_lines)
  if(_line MATCHES "^[ \t]*(gl[^ \t]+)[ \t]*$")
    set(_name "${CMAKE_MATCH_1}")
    string(TOUPPER "${_name}" _upper)
    string(APPEND _gl_declarations "extern PFN${_upper}PROC ${_name};\n")
    string(APPEND _gl_definitions  "PFN${_upper}PROC ${_name} = nullptr;\n")
    string(APPEND _gl_assignments  "GLGETPROCADDRESS ( PFN${_upper}PROC, ${_name} );\n")
  else()
    string(REPLACE "*DISCLAIMER*" "${_gl_disclaimer}" _line "${_line}")
    string(APPEND _gl_declarations "${_line}\n")
    string(APPEND _gl_definitions  "${_line}\n")
    string(APPEND _gl_assignments  "${_line}\n")
  endif()
endforeach()

# Write through a .tmp + configure_file(COPYONLY) so the destination
# timestamp only updates when the contents actually change, avoiding
# spurious rebuilds.
file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/glDeclarations.h.tmp" "${_gl_declarations}")
file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/glDefinitions.h.tmp"  "${_gl_definitions}")
file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/glAssignments.h.tmp"  "${_gl_assignments}")
configure_file("${CMAKE_CURRENT_BINARY_DIR}/glDeclarations.h.tmp"
               "${CMAKE_CURRENT_BINARY_DIR}/glDeclarations.h" COPYONLY)
configure_file("${CMAKE_CURRENT_BINARY_DIR}/glDefinitions.h.tmp"
               "${CMAKE_CURRENT_BINARY_DIR}/glDefinitions.h" COPYONLY)
configure_file("${CMAKE_CURRENT_BINARY_DIR}/glAssignments.h.tmp"
               "${CMAKE_CURRENT_BINARY_DIR}/glAssignments.h" COPYONLY)
#/************************************************************************/
# Generate proxy functions for debugging OpenGL calls, in pure CMake.
# Parses glcorearb.h directly and emits glProxyFunctions.{h,cpp} at
# configure time. Replaces the previous approach of shelling out to the
# C++ preprocessor through a separate script file, which was fragile under
# MSVC/vcpkg (depended on /Zc:preprocessor semantics, the giant alternation
# regex over glcorearb.h, and a separate add_custom_command that did not
# track glcorearb.h as a dependency).
#
# A tiny preprocessor walks glFunctions.txt honoring
# #ifdef/#ifndef/#if 0/#else/#endif so the same platform guards used for
# the declarations apply to the proxy generation as well.
#/************************************************************************/

set_property(DIRECTORY APPEND PROPERTY
  CMAKE_CONFIGURE_DEPENDS "${GLCOREARB_H_PATH}")

# Identifiers that are "defined" for the mini-preprocessor.
set(_gl_ppdefs "")
if(UNIX)
  list(APPEND _gl_ppdefs "__unix__")
endif()

# Walk glFunctions.txt with the mini-preprocessor to collect the set of
# gl* names that are active on the current platform.
set(_gl_active_names "")
set(_gl_active_stack "")
set(_gl_taken_stack "")
set(_gl_cur_active TRUE)
set(_gl_cur_taken FALSE)
foreach(_line IN LISTS _gl_functions_lines)
  if(_line MATCHES "^[ \t]*#[ \t]*ifdef[ \t]+([A-Za-z_][A-Za-z0-9_]*)")
    list(INSERT _gl_active_stack 0 "${_gl_cur_active}")
    list(INSERT _gl_taken_stack 0 "${_gl_cur_taken}")
    if(_gl_cur_active AND "${CMAKE_MATCH_1}" IN_LIST _gl_ppdefs)
      set(_gl_cur_active TRUE)
      set(_gl_cur_taken TRUE)
    else()
      set(_gl_cur_active FALSE)
      set(_gl_cur_taken FALSE)
    endif()
  elseif(_line MATCHES "^[ \t]*#[ \t]*ifndef[ \t]+([A-Za-z_][A-Za-z0-9_]*)")
    list(INSERT _gl_active_stack 0 "${_gl_cur_active}")
    list(INSERT _gl_taken_stack 0 "${_gl_cur_taken}")
    if(_gl_cur_active AND NOT "${CMAKE_MATCH_1}" IN_LIST _gl_ppdefs)
      set(_gl_cur_active TRUE)
      set(_gl_cur_taken TRUE)
    else()
      set(_gl_cur_active FALSE)
      set(_gl_cur_taken FALSE)
    endif()
  elseif(_line MATCHES "^[ \t]*#[ \t]*if[ \t]+([01])[ \t]*$")
    list(INSERT _gl_active_stack 0 "${_gl_cur_active}")
    list(INSERT _gl_taken_stack 0 "${_gl_cur_taken}")
    if(_gl_cur_active AND "${CMAKE_MATCH_1}" STREQUAL "1")
      set(_gl_cur_active TRUE)
      set(_gl_cur_taken TRUE)
    else()
      set(_gl_cur_active FALSE)
      set(_gl_cur_taken FALSE)
    endif()
  elseif(_line MATCHES "^[ \t]*#[ \t]*else")
    list(GET _gl_active_stack 0 _parent)
    if(_parent AND NOT _gl_cur_taken)
      set(_gl_cur_active TRUE)
      set(_gl_cur_taken TRUE)
    else()
      set(_gl_cur_active FALSE)
    endif()
  elseif(_line MATCHES "^[ \t]*#[ \t]*endif")
    list(GET _gl_active_stack 0 _gl_cur_active)
    list(GET _gl_taken_stack 0 _gl_cur_taken)
    list(REMOVE_AT _gl_active_stack 0)
    list(REMOVE_AT _gl_taken_stack 0)
  elseif(_gl_cur_active AND _line MATCHES "^[ \t]*(gl[^ \t]+)[ \t]*$")
    list(APPEND _gl_active_names "${CMAKE_MATCH_1}")
  endif()
endforeach()

# Build a per-name lookup of return type and argument list by scanning
# glcorearb.h for "GLAPI <ret> APIENTRY <name> (<args>);" prototypes.
file(STRINGS "${GLCOREARB_H_PATH}" _gl_proto_lines
     REGEX "^GLAPI .*APIENTRY gl[A-Za-z0-9_]+ *\\(")
foreach(_proto IN LISTS _gl_proto_lines)
  string(REGEX REPLACE "^GLAPI " "" _proto "${_proto}")
  # Note: glcorearb.h writes pointer-returning prototypes as
  # "void *APIENTRY glFoo" (no space between * and APIENTRY), so we strip
  # "APIENTRY " without requiring a leading space.
  string(REGEX REPLACE "APIENTRY " "" _proto "${_proto}")
  if(_proto MATCHES "^(.*)(gl[A-Za-z0-9_]+)[ \t]*\\((.*)\\)")
    set(_ret  "${CMAKE_MATCH_1}")
    set(_name "${CMAKE_MATCH_2}")
    set(_args "${CMAKE_MATCH_3}")
    # NOTE: subsequent REGEX calls clobber CMAKE_MATCH_* so cache them first.
    string(REGEX REPLACE "[ \t]+$" "" _ret "${_ret}")
    set("_gl_proto_${_name}_ret"  "${_ret}")
    set("_gl_proto_${_name}_args" "${_args}")
  endif()
endforeach()

# Emit glProxyFunctions.{h,cpp}.
set(_gl_proxy_h
  "#ifndef AEONGAMES_GLPROXYFUNCTIONS_H\n#define AEONGAMES_GLPROXYFUNCTIONS_H\n")
set(_gl_proxy_cpp
  "#include \"OpenGLFunctions.hpp\"\nnamespace AeonGames {\n")

# MSVC's traditional preprocessor does not support __VA_OPT__; fall back
# to the GNU "##" comma-eating extension which cl.exe also accepts unless
# /Zc:preprocessor is enabled.
if(MSVC)
  set(_gl_va_opt ", ##")
else()
  set(_gl_va_opt "__VA_OPT__(,)")
endif()

foreach(_name IN LISTS _gl_active_names)
  if(NOT DEFINED "_gl_proto_${_name}_ret")
    # No prototype found in glcorearb.h (e.g. glX* on Linux); silently
    # skip, matching the prior pipeline's behavior.
    continue()
  endif()
  set(_ret  "${_gl_proto_${_name}_ret}")
  set(_args "${_gl_proto_${_name}_args}")

  # Build the call-site argument list by taking the last identifier of
  # each comma-separated parameter declaration.
  set(_call_args "")
  if(NOT _args MATCHES "^[ \t]*$" AND NOT _args MATCHES "^[ \t]*void[ \t]*$")
    string(REPLACE "," ";" _arg_pieces "${_args}")
    foreach(_arg IN LISTS _arg_pieces)
      string(REGEX MATCH "[A-Za-z0-9_]+[ \t]*$" _arg_name "${_arg}")
      string(STRIP "${_arg_name}" _arg_name)
      list(APPEND _call_args "${_arg_name}")
    endforeach()
    list(JOIN _call_args "," _call_args)
  endif()

  if(_args MATCHES "^[ \t]*$" OR _args MATCHES "^[ \t]*void[ \t]*$")
    set(_proxy_params "size_t aLine, const char* aFile, const char* aFunction")
  else()
    set(_proxy_params "size_t aLine, const char* aFile, const char* aFunction, ${_args}")
  endif()

  # Match glcorearb.h's "void *glFoo" pointer-return style (no space
  # between * and the function name).
  if(_ret MATCHES "\\*$")
    set(_sep "")
  else()
    set(_sep " ")
  endif()

  string(APPEND _gl_proxy_h
    "${_ret}${_sep}${_name}Proxy (${_proxy_params});\n"
    "#define ${_name}(...) ${_name}Proxy(__LINE__, __FILE__, __FUNCTION__ ${_gl_va_opt} __VA_ARGS__ )\n")

  string(APPEND _gl_proxy_cpp
    "#undef ${_name}\n"
    "${_ret}${_sep}${_name}Proxy (${_proxy_params}) {\n")
  if(_ret STREQUAL "void")
    string(APPEND _gl_proxy_cpp
      "    ${_name}(${_call_args});\n"
      "    OPENGL_CHECK_ERROR_NO_THROW_LINE_FILE_FUNCTION(aLine,aFile,aFunction);\n")
  else()
    string(APPEND _gl_proxy_cpp
      "    ${_ret} result = ${_name}(${_call_args});\n"
      "    OPENGL_CHECK_ERROR_NO_THROW_LINE_FILE_FUNCTION(aLine,aFile,aFunction);\n"
      "    return result;\n")
  endif()
  string(APPEND _gl_proxy_cpp "}\n")
endforeach()

string(APPEND _gl_proxy_h   "#endif\n")
string(APPEND _gl_proxy_cpp "}\n")

file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/glProxyFunctions.h.tmp"   "${_gl_proxy_h}")
file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/glProxyFunctions.cpp.tmp" "${_gl_proxy_cpp}")
configure_file("${CMAKE_CURRENT_BINARY_DIR}/glProxyFunctions.h.tmp"
               "${CMAKE_CURRENT_BINARY_DIR}/glProxyFunctions.h" COPYONLY)
configure_file("${CMAKE_CURRENT_BINARY_DIR}/glProxyFunctions.cpp.tmp"
               "${CMAKE_CURRENT_BINARY_DIR}/glProxyFunctions.cpp" COPYONLY)

#/************************************************************************/

set(OPENGL_RENDERER_HEADERS
    ${CMAKE_CURRENT_BINARY_DIR}/glDeclarations.h
    ${CMAKE_CURRENT_BINARY_DIR}/glDefinitions.h
    ${CMAKE_CURRENT_BINARY_DIR}/glAssignments.h
    ${CMAKE_CURRENT_BINARY_DIR}/glProxyFunctions.h
    OpenGLRenderer.hpp
    OpenGLWindow.hpp
    OpenGLFunctions.hpp
    OpenGLBuffer.hpp
    OpenGLMesh.hpp
    OpenGLPipeline.hpp
    OpenGLMaterial.hpp
    OpenGLTexture.hpp
    OpenGLFrameBuffer.hpp
    OpenGLMemoryPoolBuffer.hpp
    OpenGLStorageMemoryPoolBuffer.hpp)

set(OPENGL_RENDERER_SOURCES
    ${CMAKE_CURRENT_BINARY_DIR}/glProxyFunctions.cpp
    OpenGLRenderer.cpp
    OpenGLWindow.cpp
    OpenGLBuffer.cpp
    OpenGLMesh.cpp
    OpenGLPipeline.cpp
    OpenGLMaterial.cpp
    OpenGLTexture.cpp
    OpenGLFunctions.cpp
    OpenGLFrameBuffer.cpp
    OpenGLMemoryPoolBuffer.cpp
    OpenGLStorageMemoryPoolBuffer.cpp
    Plugin.cpp)

# set_source_files_properties(OpenGLFunctions.cpp PROPERTIES COMPILE_FLAGS "-E")

add_library(OpenGLRenderer
            SHARED
            ${OPENGL_RENDERER_HEADERS}
            ${OPENGL_RENDERER_SOURCES}
            ${CMAKE_SOURCE_DIR}/include/aeongames/Renderer.hpp)

if(IWYU_PROGRAM)
  set_property(TARGET OpenGLRenderer PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${IWYU_COMMAND_LINE})
endif()

target_link_libraries(OpenGLRenderer
                      ${OPENGL_LIBRARIES}
                      ${X11_LIBRARIES}
                      ProtoBufClasses
                      AeonEngine
                      Threads::Threads)

if(MSVC)
  set_target_properties(
    OpenGLRenderer
    PROPERTIES COMPILE_FLAGS "-WX -D_CRT_SECURE_NO_WARNINGS")
elseif(MINGW OR MSYS)
  set_target_properties(OpenGLRenderer PROPERTIES PREFIX "")
endif()

set_property(GLOBAL APPEND PROPERTY PLUGINS OpenGLRenderer)

if(USE_CLANG_TIDY)
  set_target_properties(
    OpenGLRenderer
    PROPERTIES
      CXX_CLANG_TIDY
      "${CLANG_TIDY_EXECUTABLE};-fix;-header-filter=aeongames/;${CLANG_TIDY_CHECKS}"
    )
endif()
